<resources>
    <string name="app_name">ReCupVendor</string>
    <string name="action_settings">Settings</string>
    <string name="scan_customer_barcode">Scan User</string>
    <string name="scan_cup_barcode">Scan Cup</string>
    <string name="execute">Execute</string>
    <string name="remove">Remove</string>

    <!-- Strings related to MainActivity-->
    <string name="scan_barcode_button">Scan barcode</string>
    <string name="no_barcode_captured">No barcode captured</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>

    <!-- Strings related to barcode scanner -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
</resources>
