<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:src="@drawable/background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/scan_cup2remove_barcode_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/remove"
        android:background="@color/colorAccent"
        android:textColor="@color/colorWhite"
        app:layout_constraintHorizontal_bias="0.502"/>

    <Button
        android:id="@+id/scan_user_barcode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="190dp"
        android:text="@string/scan_customer_barcode"
        android:background="@color/colorAccent"
        android:textColor="@color/colorWhite"
        app:layout_constraintHorizontal_bias="0.502"/>

    <Button
    android:id="@+id/scan_cup_barcode_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginTop="41dp"
    app:layout_constraintTop_toBottomOf="@+id/scan_user_barcode_button"
    android:text="@string/scan_cup_barcode"
    android:background="@color/colorAccent"
    android:textColor="@color/colorWhite"/>

    <Button
        android:id="@+id/execute_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="41dp"
        app:layout_constraintTop_toBottomOf="@+id/scan_cup_barcode_button"
        android:text="@string/execute"
        android:background="@color/colorAccent"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/result_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_barcode_captured"
        android:textSize="22sp"
        android:freezesText="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="41dp"
        app:layout_constraintTop_toBottomOf="@+id/execute_button"
        android:gravity="center" />

</android.support.constraint.ConstraintLayout>